# ludum-dare-50

./: .gitignore  Cargo.toml  README.md  index.html
src/: game.rs  main.rs  menu.rs
