[package]
name = "ludum-dare-50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy-inspector-egui = "0.9.0"
rand = "0.8.5"
bevy_tweening = "0.3.3"
bevy_asset_loader = "0.9.0"
bevy_rapier2d = { version = "0.12.1", features = [ "render" ] }