[package]
name = "ludum-dare-50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", default-features = false, features = [
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher",
]}
bevy-inspector-egui = "0.9.0"
rand = "0.8.5"
bevy_tweening = "0.3.3"
bevy_asset_loader = "0.9.0"
bevy_rapier2d = { version = "0.12.1", features = [ "render" ] }
bevy_kira_audio = "0.8.0"